--- a/requirements.yml
+++ b/requirements.yml
@@ -2,7 +2,8 @@
 collections:
   - ansible.posix
   - ansible.utils
-  - containers.podman
+  - name: containers.podman
+    version: '<=1.9.3'
   - community.crypto
   - name: community.general
     version: '<5.0.0'
